--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -29,10 +29,12 @@
         "advancedPanelLabel": "Advanced",
         "advancedPanelTooltip": "Advanced Preferences",
         "alignAudioToVideo": "Align Audio to Video",
+        "alignment": "Alignment",
         "alignTextToTheCentre_title": "Align text to the centre",
         "alignTextToTheLeft_title": "Align text to the left",
         "alignTextToTheRight_title": "Align text to the right",
         "all": "All",
+        "allCaps": "All Caps",
         "allowZoomingWithModifierKey": "Enable Timeline Zooming with Mouse Scroll & Modifier Key",
         "allVisibleColumns": "All Visible Columns",
         "alphaAdd": "Alpha Add",
@@ -73,6 +75,7 @@
         "audioEnhancements": "Audio Enhancements",
         "automatic": "Automatic",
         "automaticallyImport": "Automatically Import without Notification",
+        "automaticKeyframes": "Automatic Keyframes",
         "autoMountOnAC": "Mount external drives when switching to AC power",
         "autoUnmountOnBattery": "Unmount external drives when switching to battery power",
         "back": "Back",
@@ -83,6 +86,7 @@
         "backupMinimumDuration": "Backup Minimum Duration",
         "badTouchBarIcon": "Only supported image files (JPEG, PNG, TIFF, GIF or BMP) are supported as Touch Bar icons.",
         "bank": "Bank",
+        "basic": "Basic",
         "basicGrid": "Basic Grid",
         "basicSurround": "Basic Surround",
         "basicSurround9": "Surround",
@@ -114,6 +118,7 @@
         "blendModes": "Blend Modes",
         "blue": "Blue",
         "board": "Board",
+        "bottom": "Bottom",
         "bottomHorizontal": "Bottom Horizontal",
         "breakApartClipItems": "Break Apart Clip Items",
         "brightness": "Brightness",
@@ -133,6 +138,7 @@
         "buttonLabel": "Button Label",
         "buttons": "Buttons",
         "cancel": "Cancel",
+        "center": "Center",
         "changeBrowserClipHeightDown_title": "Browser Clip Height Decrease",
         "changeBrowserClipHeightUp_title": "Browser Clip Height Increase",
         "changeBrowserDurationDown_title": "Browser Duration Decrease",
@@ -555,6 +561,7 @@
         "extendEdit": "Extend Edit",
         "extraHigh": "Extra High",
         "failedToChangeLanguage": "Unable to change Final Cut Pro's language.",
+        "family": "Family",
         "favourite": "Favourite",
         "favourites": "Favourites",
         "fcpMediaFolder_Error_NoFiles": "No files were provided to import.",
@@ -759,9 +766,11 @@
         "flat": "Flat",
         "flat9": "Flat",
         "folder": "Folder",
+        "font": "Font",
         "forward": "Forward",
         "four": "4",
         "frame": "Frame",
+        "full": "Full",
         "fullFrame": "Full Frame",
         "fullName": "Full Name",
         "functions": "Functions",
@@ -853,6 +862,15 @@
             "other": "items"
         },
         "joinClips": "Join Clips",
+        "justified": "Justified",
+        "justifiedCenter": "Justified Center",
+        "justifiedCenter9": "Just Cntr",
+        "justifiedFull": "Justified Full",
+        "justifiedFull9": "Just Full",
+        "justifiedLeft": "Justified Left",
+        "justifiedLeft9": "Just Left",
+        "justifiedRight": "Justified Right",
+        "justifiedRight9": "Just Rght",
         "justifyAll_title": "Justify all",
         "justifyLastCentre_title": "Justify last centre",
         "justifyLastLeft_title": "Justify last left",
@@ -922,6 +940,7 @@
         "menuChoiceSubText": "Menu: %{path}",
         "method": "Method",
         "methods": "Methods",
+        "middle": "Middle",
         "midi": "MIDI",
         "midiBankDescription": "Changes the MIDI Control Bank",
         "midiColorBoardDescription": "Controls the Color Board via MIDI Controls",
@@ -1099,6 +1118,7 @@
         "pluginsUnableToDisable": "Unable to disable the '%{pluginName}' plugin.",
         "pluginsUnableToEnable": "Unable to enable the '%{pluginName}' plugin.",
         "polyphonicKeyPressure": "Polyphonic Key Pressure",
+        "position": "Position",
         "preferences": "Preferences",
         "prefix": "Prefix",
         "premultipliedMix": "Premultiplied Mix",
@@ -1162,6 +1182,7 @@
         "rollingShutter": "Rolling Shutter",
         "rotate": "Rotate",
         "rotate9": "Rotate",
+        "rotation": "Rotation",
         "saturation": "Saturation",
         "saturation4": "Sat",
         "save": "Save",
@@ -1170,6 +1191,7 @@
         "saveColorEffectPreset": "Save Color Effect Preset",
         "saveCurrentFrameToStillsMemory": "Save Current Frame to Stills Memory",
         "savedToPasteboardBuffer": "Saved to Pasteboard Buffer %{id}",
+        "scale": "Scale",
         "scanFinalCutPro": "Scan Final Cut Pro",
         "scanFinalCutProSetupOne": "CommandPost needs to scan your system for Final Cut Pro for Plugins & Motion Templates.",
         "scanFinalCutProSetupTwo": "Depending on how many plugins and effects you have installed, this can take several minutes.",
@@ -1338,6 +1360,7 @@
         "toggleVideoScopesInEventViewer": "Toggle Video Scopes in Event Viewer",
         "toggleVideoScopesInViewer": "Toggle Video Scopes in Viewer",
         "tools": "Tools",
+        "top": "Top",
         "topCentreOfTimeline": "Top Centre of Timeline",
         "topHorizontal": "Top Horizontal",
         "touchBar": "Touch Bar",
@@ -1369,6 +1392,7 @@
         "two": "2",
         "type": "Type",
         "typeDateAndTime_title": "Type Date & Time",
+        "typeface": "Typeface",
         "types": "Types",
         "unassigned": "Unassigned",
         "undo": "Undo",
@@ -1381,8 +1405,10 @@
         "updateAvailable": "Update Available",
         "updateEffectsListFailed": "Unfortunately the Effects List was not successfully updated.",
         "useCustomFilename": "Use Custom Filename",
+        "useOrientation": "Use Orientation",
         "userAPIKey": "User API Key",
         "userGuide": "User Guide",
+        "useRotation": "Use Rotation",
         "useUnderscore": "Use Underscore Seperator",
         "usingTheFollowingDestinationPreset": "Using the following Destination Preset",
         "usingTheFollowingNamingConvention": "Using the following naming convention",
