--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -49,6 +49,8 @@
         "angle": "Angle",
         "angle3": "ANG",
         "angles": "Angles",
+        "animate": "Animate",
+        "anisotropic": "Anisotropic",
         "apiKeysValidated": "Your API keys you entered have been successfully validated.",
         "appearance": "Appearance",
         "apple": "Apple",
@@ -79,6 +81,7 @@
         "autoMountOnAC": "Mount external drives when switching to AC power",
         "autoUnmountOnBattery": "Unmount external drives when switching to battery power",
         "back": "Back",
+        "backEdge": "Back Edge",
         "backgroundRender": "Background Render",
         "backToFront": "Back to Front",
         "backToFront9": "Bak2Front",
@@ -117,6 +120,7 @@
         "blendMode9": "BlendMode",
         "blendModes": "Blend Modes",
         "blue": "Blue",
+        "blur": "Blur",
         "board": "Board",
         "bottom": "Bottom",
         "bottomHorizontal": "Bottom Horizontal",
@@ -215,6 +219,7 @@
         "consoleSectionsHideAll": "Hide All",
         "consoleSectionsShowAll": "Show All",
         "continue": "Continue",
+        "contrast": "Contrast",
         "controlChange": "Control Change",
         "controlFCPUIElementAbsolute": "Control Final Cut Pro User Interface Element (Absolute)",
         "controlFCPUIElementRelative": "Control Final Cut Pro User Interface Element (Relative)",
@@ -488,6 +493,8 @@
         "deleteAfterImport": "Delete file from Watch Folder (%{numberOfSeconds} %{seconds} after Import)",
         "deleteFileAfterImport": "Delete Generated File After Import",
         "deleteNote": "Make sure <strong>Copy to library storage location</strong> is selected in Final Cut Pro's Preferences.",
+        "depth": "Depth",
+        "depthDirection": "Depth Direction",
         "description": "Description",
         "detachAudio": "Detach Audio",
         "developer": "Developer Tools",
@@ -551,6 +558,7 @@
         "enterCustomFilenameError": "This filename looks invalid. Please try again.",
         "enterFinderTag": "Please enter the Finder Tag you want to use:",
         "enterFinderTagError": "This Finder Tag looks invalid.\n\nPlease try again.",
+        "environment": "Environment",
         "equalization": "Equalization",
         "errorLog": "Error Log",
         "exactMatch": "Exact Match",
@@ -560,6 +568,7 @@
         "exposure": "Exposure",
         "extendEdit": "Extend Edit",
         "extraHigh": "Extra High",
+        "face": "Face",
         "failedToChangeLanguage": "Unable to change Final Cut Pro's language.",
         "family": "Family",
         "favourite": "Favourite",
@@ -610,6 +619,7 @@
         "fiftyHz": "50Hz",
         "fileCouldNotBeRead": "The selected file could not be read.",
         "fill": "Fill",
+        "fillWith": "Fill With",
         "filterBrowserBeforeSearch": "Filter Browser Before Search",
         "finalCutPro": "Final Cut Pro",
         "finalcutpro_actions_custom_label": "Shortcuts: Custom Actions",
@@ -770,6 +780,10 @@
         "forward": "Forward",
         "four": "4",
         "frame": "Frame",
+        "frontEdge": "Front Edge",
+        "frontEdgeSize": "Front Edge Size",
+        "frontEdgeSizeDepth": "Front Edge Size Depth",
+        "frontEdgeSizeWidth": "Front Edge Size Width",
         "full": "Full",
         "fullFrame": "Full Frame",
         "fullName": "Full Name",
@@ -794,6 +808,7 @@
         "goToEnd": "Go to End",
         "goToRangeEnd": "Go to Range End",
         "goToRangeStart": "Go to Range Start",
+        "gradient": "Gradient",
         "green": "Green",
         "gridOverlay": "Grid Overlay",
         "grouped": "Grouped",
@@ -848,8 +863,10 @@
         "inertiaCam": "InertiaCam",
         "info": "Info",
         "insertIntoTimeline": "Insert into Timeline",
+        "insideCorners": "Inside Corners",
         "inspector": "Inspector",
         "install": "Install",
+        "intensity": "Intensity",
         "introTagLine": "Workflow Toolkit for Professional Editors",
         "introText": "Thank you for installing CommandPost. This guide will help you set things up.",
         "invalidAPIKeysSupplied": "Invalid API Keys Supplied",
@@ -901,6 +918,8 @@
         "LibrariesBrowser_NoClipTitled": "No clip titled '%{title}' was found.",
         "lighten": "Lighten",
         "lighten9": "Lighten",
+        "lighting": "Lighting",
+        "lightingStyle": "Lighting Style",
         "linearBurn": "Linear Burn",
         "linearBurn9": "LinBurn",
         "linearDodge": "Linear Dodge",
@@ -1043,6 +1062,7 @@
         "options": "Options",
         "originalClipName": "Original Clip Name",
         "originalOptimised": "Original/Optimised",
+        "outline": "Outline",
         "outroText": "You can access CommandPost via the satellite icon<br />in your system’s menubar at the top right corner of the screen.",
         "outroTitle": "CommandPost is now setup and ready to go!",
         "overlay": "Overlay",
@@ -1231,6 +1251,7 @@
         "selectRightAudioEdge": "Select Right Audio Edge",
         "selectRightEdge": "Select Right Edge",
         "selectVoice": "Select Voice",
+        "selfShadows": "Self Shadows",
         "send": "Send",
         "sendCrashData": "Send Crash Data (requires restart)",
         "sendTestNotification": "Send Test Notification",
@@ -1300,6 +1321,7 @@
         "smoothCam": "SmoothCam",
         "softLight": "Soft Light",
         "softLight9": "SoftLight",
+        "softness": "Softness",
         "sound": "Sound",
         "spacing": "Spacing",
         "stabilizationMethod": "Stabilization Method",
@@ -1339,9 +1361,11 @@
         "testTitle": "CommandPost Test",
         "text": "Text",
         "textToSpeechDestination": "Please select where you want to save your audio files:",
+        "texture": "Texture",
         "thisCanTakeSeveralMinutes": "This can take several minutes",
         "thisIsATest": "This is a test",
         "three": "3",
+        "threeDeeText": "3D Text",
         "timeline": "Timeline",
         "timeline_group": "Timeline",
         "timelineHistory": "Timeline History",
@@ -1450,6 +1474,7 @@
         "watchFolderFCPXMLTooltip": "Final Cut Pro XML Watch Folder Preferences",
         "watchFolders": "Watch Folders",
         "watchFolderXMLHelp": "This feature allows you to recieve macOS notfications whenever a FCPXML file is added into any of the below watch folders.<br />From the notification you can then <b>Import</b> these files directly to your current Final Cut Pro timeline.<br />If you hold down <b>SHIFT</b> when pressing <b>Import</b>, it will import all the outstanding files.",
+        "weight": "Weight",
         "whatDidYouExpectToHappen": "What did you expect to happen?",
         "whatFeatures": "What feature would you like to see implemented or improved?",
         "whatStepsToRecreate": "What are the steps to recreate the problem?",
@@ -1457,6 +1482,7 @@
         "wheels": "Wheels",
         "white": "White",
         "wholeWords": "Whole Words",
+        "width": "Width",
         "windowManagement": "Window Management",
         "xml": "XML",
         "yellow": "Yellow",
