--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -509,6 +509,7 @@
         "display": "Display",
         "displayProxyOriginalIcon": "Display Proxy/Original Icon in Menubar",
         "displayThisMenuAsIcon": "Display Menubar As Icon",
+        "distance": "Distance",
         "dockIcon": "Dock Icon",
         "donateToDevelopers": "Paypal Donation to Developers",
         "done": "Done",
@@ -517,6 +518,7 @@
         "draggable": "Draggable",
         "draggableGuides": "Draggable Guides",
         "driveManagement": "Drive Management",
+        "dropShadow": "Drop Shadow",
         "duration": "Duration",
         "edit": "Edit",
         "effects": "Effects",
@@ -802,6 +804,7 @@
         "global_midibanks_action": "MIDI Banks",
         "global_touchbarbanks_action": "Touch Bar Banks",
         "global_widgets_action": "Global Touch Bar Widgets",
+        "glow": "Glow",
         "goTo": "Go to",
         "goToBeginning": "Go to Beginning",
         "goToColorInspector": "Go to Color Inspector",
@@ -1162,6 +1165,7 @@
         "pushoverValidateFailed": "You must enter both a User and Application API key and then press the 'Validate' button before you can enable Pushover Notifications.",
         "quality": "Quality",
         "quit": "Quit",
+        "radius": "Radius",
         "rectangle": "Rectangle",
         "red": "Red",
         "redo": "Redo",
