--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -19,6 +19,7 @@
         "addedFCPUIElementToMIDI": "Registered Final Cut Pro User Interface Element to MIDI Control",
         "addedToCompressor": "Added to Compressor:",
         "addHueSatCurvesEffect": "Add Hue/Sat Curves Effect",
+        "additive": "Additive",
         "addMarkersToSelectedClipInBrowserFromFrameIOCSV_title": "Add Markers to Selected Clip in Browser from Frame.io CSV",
         "addMarkersToSelectedClipInBrowserFromFrameIOCSVCompleted": "Importing the CSV to markers has completed successfully.",
         "addTextToNotesFieldAfterImport": "Add to Notes Field After Import",
@@ -73,6 +74,7 @@
         "audio": "Audio",
         "audioAnalysis": "Audio Analysis",
         "audioConfiguration": "Audio Configuration",
+        "audioCrossfade": "Audio Crossfade",
         "audioEffect_group": "Audio Effect",
         "audioEnhancements": "Audio Enhancements",
         "automatic": "Automatic",
@@ -82,6 +84,9 @@
         "autoUnmountOnBattery": "Unmount external drives when switching to battery power",
         "back": "Back",
         "backEdge": "Back Edge",
+        "backEdgeSize": "Back Edge Size",
+        "backEdgeSizeDepth": "Back Edge Size Depth",
+        "backEdgeSizeWidth": "Back Edge Size Width",
         "backgroundRender": "Background Render",
         "backToFront": "Back to Front",
         "backToFront9": "Bak2Front",
@@ -125,6 +130,7 @@
         "bottom": "Bottom",
         "bottomHorizontal": "Bottom Horizontal",
         "breakApartClipItems": "Break Apart Clip Items",
+        "bright": "Bright",
         "brightness": "Brightness",
         "brightness10": "Brightness",
         "brightness4": "Bri",
@@ -179,6 +185,7 @@
         "cmdDoesNotExistError": "No command with the ID of %{id} could be found.",
         "cmdGroupNotActivated": "Unable to activate the '%{id}' command group.",
         "cmdIdMissingError": "A command ID is required to execute.",
+        "cold": "Cold",
         "color": "Color",
         "colorBoard": "Color Board",
         "colorBoard2": "CB",
@@ -479,6 +486,7 @@
         "credits": "Credits",
         "crop": "Crop",
         "cropTypes": "Crop Types",
+        "crossDissolve": "Cross Dissolve",
         "crossHair": "Cross Hair",
         "currentIncrementalNumber": "Incremental Number",
         "custom": "Custom",
@@ -487,6 +495,7 @@
         "customiseShortcuts": "Customise Shortcuts",
         "customPrefixError": "This prefix looks invalid. Please try again.",
         "customTouchBar": "Custom Touch Bar",
+        "dark": "Dark",
         "darken": "Darken",
         "darken9": "Darken",
         "delete": "Delete",
@@ -496,6 +505,7 @@
         "depth": "Depth",
         "depthDirection": "Depth Direction",
         "description": "Description",
+        "deselectAll": "Deselect All",
         "detachAudio": "Detach Audio",
         "developer": "Developer Tools",
         "developerGuide": "Developer Guide",
@@ -519,7 +529,9 @@
         "draggableGuides": "Draggable Guides",
         "driveManagement": "Drive Management",
         "dropShadow": "Drop Shadow",
+        "dull": "Dull",
         "duration": "Duration",
+        "ease": "Ease",
         "edit": "Edit",
         "effects": "Effects",
         "eight": "8",
@@ -571,6 +583,8 @@
         "extendEdit": "Extend Edit",
         "extraHigh": "Extra High",
         "face": "Face",
+        "fadeInType": "Fade In Type",
+        "fadeOutType": "Fade Out Type",
         "failedToChangeLanguage": "Unable to change Final Cut Pro's language.",
         "family": "Family",
         "favourite": "Favourite",
@@ -622,6 +636,7 @@
         "fileCouldNotBeRead": "The selected file could not be read.",
         "fill": "Fill",
         "fillWith": "Fill With",
+        "film": "Film",
         "filterBrowserBeforeSearch": "Filter Browser Before Search",
         "finalCutPro": "Final Cut Pro",
         "finalcutpro_actions_custom_label": "Shortcuts: Custom Actions",
@@ -706,12 +721,15 @@
         "finalcutpro_preferences_scanfinalcutpro_label": "Preferences: Scan Final Cut Pro",
         "finalcutpro_setup_scan_label": "Setup: Final Cut Pro Plugin Scan",
         "finalcutpro_setup_unsupportedversion_label": "Setup: Unsupported Version Check",
+        "finalcutpro_tangent_audio_label": "Tangent: Audio Inspector",
         "finalcutpro_tangent_browser_label": "Tangent: Browser Controls",
         "finalcutpro_tangent_clip_label": "Tangent: Final Cut Pro Clip Controls",
         "finalcutpro_tangent_color_label": "Tangent: Final Cut Pro Color Inspector Controls",
         "finalcutpro_tangent_common_label": "Tangent: Common Utilities",
         "finalcutpro_tangent_edit_label": "Tangent: Final Cut Pro Edit Controls",
+        "finalcutpro_tangent_generator_label": "Tangent: Generator Inspector",
         "finalcutpro_tangent_group_label": "Tangent: Final Cut Pro Support",
+        "finalcutpro_tangent_info_label": "Tangent: Info Inspector",
         "finalcutpro_tangent_manager_label": "Manager: Tangent",
         "finalcutpro_tangent_modes_label": "Tangent: Modes",
         "finalcutpro_tangent_new_label": "Tangent: Final Cut Pro New Controls",
@@ -719,7 +737,11 @@
         "finalcutpro_tangent_overlay_label": "Tangent: Viewer Overlay",
         "finalcutpro_tangent_pasteboard_label": "Tangent: Final Cut Pro Pasteboard Buffer",
         "finalcutpro_tangent_playback_label": "Tangent: Playback",
+        "finalcutpro_tangent_share_label": "Tangent: Share Inspector",
+        "finalcutpro_tangent_text_label": "Tangent: Text Inspector",
         "finalcutpro_tangent_timeline_label": "Tangent: Final Cut Pro Timeline Controls",
+        "finalcutpro_tangent_title_label": "Tangent: Title Inspector",
+        "finalcutpro_tangent_transition_label": "Tangent: Transition Inspector",
         "finalcutpro_tangent_trim_label": "Tangent: Final Cut Pro Trim Controls",
         "finalcutpro_tangent_video_label": "Tangent: Video Inspector",
         "finalcutpro_tangent_view_label": "Tangent: Final Cut Pro View Controls",
@@ -859,6 +881,8 @@
         "iMessageNotifications": "iMessage Notifications",
         "import": "Import",
         "importToTimeline": "Import directly into Timeline",
+        "in": "In",
+        "inAndOut": "In & Out",
         "includeContactInfo": "Include contact info",
         "includeTextInFilename": "Include Entered Text in Filename",
         "incomingFile": "Incoming File...",
@@ -916,6 +940,7 @@
         "left": "Left",
         "leftSurroundToRightFront": "Left Surround to Right Front",
         "leftSurroundToRightFront9": "Left2Rght",
+        "leftTextLayer": "Left Text Layer",
         "leftVertical": "Left Vertical",
         "letterbox": "Letterbox",
         "LibrariesBrowser_NoClipTitled": "No clip titled '%{title}' was found.",
@@ -923,6 +948,7 @@
         "lighten9": "Lighten",
         "lighting": "Lighting",
         "lightingStyle": "Lighting Style",
+        "linear": "Linear",
         "linearBurn": "Linear Burn",
         "linearBurn9": "LinBurn",
         "linearDodge": "Linear Dodge",
@@ -935,6 +961,7 @@
         "localMachine": "Local Machine",
         "localPasteboardHistory": "Local Pasteboard History",
         "location": "Location",
+        "look": "Look",
         "loopPlayback": "Loop Playback",
         "loopSearch": "Loop Search",
         "loudness": "Loudness",
@@ -986,6 +1013,7 @@
             "one": "min",
             "other": "mins"
         },
+        "minusThreeDb": "-3dB",
         "mix": "Mix",
         "mix4": "Mix",
         "mode": "Mode",
@@ -1065,6 +1093,7 @@
         "options": "Options",
         "originalClipName": "Original Clip Name",
         "originalOptimised": "Original/Optimised",
+        "out": "Out",
         "outline": "Outline",
         "outroText": "You can access CommandPost via the satellite icon<br />in your system’s menubar at the top right corner of the screen.",
         "outroTitle": "CommandPost is now setup and ready to go!",
@@ -1140,12 +1169,14 @@
         "pluginStatus": "Status",
         "pluginsUnableToDisable": "Unable to disable the '%{pluginName}' plugin.",
         "pluginsUnableToEnable": "Unable to enable the '%{pluginName}' plugin.",
+        "plusThreeDb": "+3dB",
         "polyphonicKeyPressure": "Polyphonic Key Pressure",
         "position": "Position",
         "preferences": "Preferences",
         "prefix": "Prefix",
         "premultipliedMix": "Premultiplied Mix",
         "premultipliedMix9": "Premulti",
+        "presets": "Presets",
         "previous": "Previous",
         "privacy": "Privacy",
         "problemProcessingCSV": "There was a problem processing the CSV file. Are you sure it's valid?",
@@ -1202,6 +1233,7 @@
         "rightClickToAssignAction": "You can right click on this button to assign an action to it.",
         "rightSurroundToLeftFront": "Right Surround to Left Front",
         "rightSurroundToLeftFront9": "Rght2Left",
+        "rightTextLayer": "Right Text Layer",
         "rightVertical": "Right Vertical",
         "rollingShutter": "Rolling Shutter",
         "rotate": "Rotate",
@@ -1210,11 +1242,14 @@
         "saturation": "Saturation",
         "saturation4": "Sat",
         "save": "Save",
+        "saveAllFormatAndAppearanceAttributes": "Save All Format and Appearance Attributes",
+        "saveAppearanceAttributes": "Save Appearance Attributes",
         "saveBrowserLayoutForSelectedCollection_title": "Save Browser Layout for Selected Collection",
         "saveBrowserLayoutToMemory": "Save Browser Layout to Memory",
         "saveColorEffectPreset": "Save Color Effect Preset",
         "saveCurrentFrameToStillsMemory": "Save Current Frame to Stills Memory",
         "savedToPasteboardBuffer": "Saved to Pasteboard Buffer %{id}",
+        "saveFormatAttributes": "Save Format Attributes",
         "scale": "Scale",
         "scanFinalCutPro": "Scan Final Cut Pro",
         "scanFinalCutProSetupOne": "CommandPost needs to scan your system for Final Cut Pro for Plugins & Motion Templates.",
@@ -1226,6 +1261,7 @@
         "scriptingTools": "Scripting Tools",
         "scrollingTimelineActivated": "Scrolling Timeline Activated",
         "scrollingTimelineDeactivated": "Scrolling Timeline Deactivated",
+        "sCurve": "S-Curve",
         "search": "Search",
         "searchAborted": "The search has been aborted.",
         "searchAbortedDescription": "The search failed to find anything after searching 500 cells, so we've aborted it.\n\nYou can try using a Smart Collection or use the 'Filter Browser Before Search' option in the HUD Search Panel to narrow your selection in the Browser.",
@@ -1288,6 +1324,7 @@
         "shareFailed": "Share Failed",
         "shareSuccessful": "Share Successful\n%{info}",
         "shareUnknown": "Type: %{type}",
+        "sharp": "Sharp",
         "shortcut_group_fcpx": "Final Cut Pro",
         "shortcut_group_global": "All Applications",
         "shortcutAlreadyInUse": "This shortcut is already in use.",
@@ -1343,6 +1380,7 @@
         "subcomponents": "Subcomponents",
         "subtract": "Subtract",
         "subtract9": "Subtract",
+        "subtractive": "Subtractive",
         "success": "Success",
         "suggestATranslation": "Suggest A New Language",
         "suggestCompressorFeatureToApple": "Suggest Compressor Feature to Apple",
@@ -1364,6 +1402,7 @@
         "ten": "10",
         "testTitle": "CommandPost Test",
         "text": "Text",
+        "textLayer": "Text Layer",
         "textToSpeechDestination": "Please select where you want to save your audio files:",
         "texture": "Texture",
         "thisCanTakeSeveralMinutes": "This can take several minutes",
@@ -1470,6 +1509,7 @@
         "volume": "Volume",
         "volume10": "Volume",
         "volume9": "Volume",
+        "warm": "Warm",
         "watchFolderAddFinderTag": "If you want to add a Finder Tag to any %{type} Files that are added to this Watch Folder please enter it below, or press OK to skip:",
         "watchFolderCompressorHelp": "This feature allows you to automatically transcode files with Compressor when they're added to any of the below Watch Folders.",
         "watchFolderCompressorTooltip": "Compressor Watch Folder Preferences",
