--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -36,6 +36,7 @@
         "alignTextToTheRight_title": "Align text to the right",
         "all": "All",
         "allCaps": "All Caps",
+        "allClips": "All Clips",
         "allowZoomingWithModifierKey": "Enable Timeline Zooming with Mouse Scroll & Modifier Key",
         "allVisibleColumns": "All Visible Columns",
         "alphaAdd": "Alpha Add",
@@ -175,6 +176,7 @@
         "clearSharedPasteboard": "Clear Shared Pasteboard",
         "cliInstallError": "I'm sorry, but we failed to Install the Command Line Tool. Please try again.",
         "clip": "Clip",
+        "clipFiltering": "Clip Filtering",
         "clipHeight": "Clip Height",
         "clipNames": "Clip Names",
         "clipRoles": "Clip Roles",
@@ -345,6 +347,7 @@
         "cpGlobalToggleTouchBar_title": "Toggle Virtual Touch Bar (Global)",
         "cpHighlightBrowserPlayhead_title": "Highlight Playhead",
         "cpHUD_title": "Toggle HUD",
+        "cpHUDSearch_title": "Toggle HUD Search Panel",
         "cpLaunchFinalCutPro_title": "Launch Final Cut Pro",
         "cpLeaveInPlaceOff_title": "Disable Leave In Place on Import",
         "cpLeaveInPlaceOn_title": "Enable Leave In Place on Import",
@@ -498,6 +501,7 @@
         "dark": "Dark",
         "darken": "Darken",
         "darken9": "Darken",
+        "decreaseClipHeight": "Decrease Clip Height",
         "delete": "Delete",
         "deleteAfterImport": "Delete file from Watch Folder (%{numberOfSeconds} %{seconds} after Import)",
         "deleteFileAfterImport": "Delete Generated File After Import",
@@ -575,6 +579,7 @@
         "environment": "Environment",
         "equalization": "Equalization",
         "errorLog": "Error Log",
+        "eventViewer": "Event Viewer",
         "exactMatch": "Exact Match",
         "exclusion": "Exclusion",
         "exclusion9": "Exclusion",
@@ -587,6 +592,7 @@
         "fadeOutType": "Fade Out Type",
         "failedToChangeLanguage": "Unable to change Final Cut Pro's language.",
         "family": "Family",
+        "favorites": "Favorites",
         "favourite": "Favourite",
         "favourites": "Favourites",
         "fcpMediaFolder_Error_NoFiles": "No files were provided to import.",
@@ -725,6 +731,7 @@
         "finalcutpro_tangent_browser_label": "Tangent: Browser Controls",
         "finalcutpro_tangent_clip_label": "Tangent: Final Cut Pro Clip Controls",
         "finalcutpro_tangent_color_label": "Tangent: Final Cut Pro Color Inspector Controls",
+        "finalcutpro_tangent_commandpost_label": "Tangent: CommandPost",
         "finalcutpro_tangent_common_label": "Tangent: Common Utilities",
         "finalcutpro_tangent_edit_label": "Tangent: Final Cut Pro Edit Controls",
         "finalcutpro_tangent_generator_label": "Tangent: Generator Inspector",
@@ -745,6 +752,7 @@
         "finalcutpro_tangent_trim_label": "Tangent: Final Cut Pro Trim Controls",
         "finalcutpro_tangent_video_label": "Tangent: Video Inspector",
         "finalcutpro_tangent_view_label": "Tangent: Final Cut Pro View Controls",
+        "finalcutpro_tangent_viewer_label": "Tangent: Viewer",
         "finalcutpro_text2speech_label": "Text to Speech",
         "finalcutpro_timeline_audioeffects_label": "Timeline: Audio Effects",
         "finalcutpro_timeline_captions_label": "Timeline: Captions",
@@ -846,6 +854,7 @@
         "height": "Height",
         "helpAndSupport": "Help & Support",
         "helpandsupport_group": "Help & Support",
+        "hideRejected": "Hide Rejected",
         "high": "High",
         "highlightedItem": "Highlighted Item",
         "highlightPlayhead": "Highlight Playhead",
@@ -886,6 +895,7 @@
         "includeContactInfo": "Include contact info",
         "includeTextInFilename": "Include Entered Text in Filename",
         "incomingFile": "Incoming File...",
+        "increaseClipHeight": "Increase Clip Height",
         "individualEffects": "Individual Effects",
         "inertiaCam": "InertiaCam",
         "info": "Info",
@@ -1055,6 +1065,7 @@
         "none": "None",
         "noPluginFound": "Unable to find a ${plugin} called '${name}'.",
         "noPluginShortcut": "There is no ${plugin} assigned to this shortcut.\n\nYou can assign Shortcuts via the CommandPost menu bar.",
+        "noRatingsOrKeywords": "No Ratings or Keywords",
         "normal": "Normal",
         "normal9": "Normal",
         "noteCC": "Note/CC",
@@ -1201,6 +1212,7 @@
         "red": "Red",
         "redo": "Redo",
         "refreshMidi": "Refresh MIDI Devices",
+        "rejected": "Rejected",
         "reload": "Reload",
         "rememberLastQuery": "Remember Last Query",
         "removeFromList": "Remove from List",
@@ -1468,6 +1480,7 @@
         "unknownError": "Unknown Error",
         "unmountExternalDrives_title": "Unmount External Drives",
         "unmountingExternalDrivesMsg": "Unmounting external drives...",
+        "unused": "Unused",
         "update": "Update",
         "updateAvailable": "Update Available",
         "updateEffectsListFailed": "Unfortunately the Effects List was not successfully updated.",
