--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -106,16 +106,16 @@
         "batchExport": "Batch Export",
         "batchExportActiveTimeline": "Batch Export Active Timeline",
         "batchExportComplete": "Batch Export is now complete.\n\nThe selected clips/projects have been added to your Final Cut Pro or Compressor render queue.",
-        "batchExportDestinationDisabled": "Target destination is disabled.",
+        "batchExportDestinationDisabled": "The Target destination you have selected is disabled in the menubar, which has aborted the Batch Export.\n\nPlease try again.",
         "batchExportFromTimeline": "Batch Export from Timeline",
         "batchExportInvalidCaptionsDetected": "Captions or subtitles with unresolved validation errors were detected, which has aborted the Batch Export.\n\nInvalid Captions can be ignored via the Batch Export Preferences if required.",
         "batchExportMissingFilesAndBadCaptionsDetected": "Missing or offline titles, effects or generators as well as captions or subtitles with unresolved validation errors were detected, which has aborted the Batch Export.\n\nMissing & Offline Effects and Invalid Captions can be ignored via the Batch Export Preferences if required.",
         "batchExportMissingFilesDetected": "Missing or offline titles, effects or generators were detected, which has aborted the Batch Export.\n\nMissing & Offline Effects can be ignored via the Batch Export Preferences if required.",
         "batchExportNoClipsInTimeline": "No clips selected in the timeline.\n\nPlease select at least one clip and try again.",
         "batchExportNoDestination": "It doesn't look like you have a Default Destination selected.\n\nYou can set a Default Destination by going to 'Preferences', clicking the 'Destinations' tab, right-clicking on the Destination you would like to use and then click 'Make Default'.\n\nYou can set a Batch Export Destination Preset via the CommandPost menubar.",
-        "batchExportNotShowing": "Unable to show the Export Dialog",
+        "batchExportNotShowing": "Unable to show the Export Dialog, which has aborted the Batch Export.\n\nPlease try again.",
         "batchExportProxyFilesDetected": "Proxy files were detected, which has aborted the Batch Export.\n\nProxy files can be ignored via the Batch Export Preferences if required.",
-        "batchExportUnexpectedAlert": "Unexpected alert while opening the Export dialog.",
+        "batchExportUnexpectedAlert": "An unexpected alert appeared while opening the Export dialog.\n\nPlease try again.",
         "behind": "Behind",
         "behind9": "Behind",
         "betterPerformance": "Better Performance",
