--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -118,6 +118,9 @@
         "batchExportUnexpectedAlert": "An unexpected alert appeared while opening the Export dialog.\n\nPlease try again.",
         "behind": "Behind",
         "behind9": "Behind",
+        "createStoryline": "Create Storyline",
+        "overwriteToPrimaryStoryline": "Overwrite to Primary Storyline",
+        "liftFromStoryline": "Lift From Storyline",
         "betterPerformance": "Better Performance",
         "betterQuality": "Better Quality",
         "black": "Black",
@@ -1291,6 +1294,8 @@
         "sections": "Sections",
         "segments": "Segments",
         "select": "Select",
+        "above": "Above",
+        "below": "Below",
         "selectCompressorDestination": "Select a Destination Folder:",
         "selectCompressorSettingsFile": "Select a Compressor Settings File:",
         "selectDestinationFolder": "Please select a Destination Folder:",
