--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1,5 +1,6 @@
 {
     "en": {
+        "above": "Above",
         "accessibilityNote": "CommandPost makes use of the built-in macOS Accessibility Frameworks<br />to control other applications, such as Final Cut Pro.<br /><br />To continue, please press <strong>Enable Accessibility</strong> below and<br />follow the prompts to allow CommandPost accessibility access.",
         "action": "Action",
         "actionHiddenText": "%{text} [Hidden]",
@@ -118,9 +119,7 @@
         "batchExportUnexpectedAlert": "An unexpected alert appeared while opening the Export dialog.\n\nPlease try again.",
         "behind": "Behind",
         "behind9": "Behind",
-        "createStoryline": "Create Storyline",
-        "overwriteToPrimaryStoryline": "Overwrite to Primary Storyline",
-        "liftFromStoryline": "Lift From Storyline",
+        "below": "Below",
         "betterPerformance": "Better Performance",
         "betterQuality": "Better Quality",
         "black": "Black",
@@ -489,6 +488,7 @@
         "createRoleForVoice": "Assign Voice Role",
         "createSpace": "Create Space",
         "createSpace9": "C Space",
+        "createStoryline": "Create Storyline",
         "credits": "Credits",
         "crop": "Crop",
         "cropTypes": "Crop Types",
@@ -786,6 +786,7 @@
         "finalcutpro_touchbar_widgets_duration_label": "Widget: Browser Duration Slider",
         "finalcutpro_touchbar_widgets_height_label": "Widget: Browser Height Slider",
         "finalcutpro_touchbar_widgets_zoom_label": "Widget: Timeline Zoom",
+        "finalcutpro_viewer_actions_label": "Viewer: Actions",
         "finalcutpro_viewer_overlays_label": "Viewer: Overlays",
         "finalcutpro_viewer_timecodeoverlay_label": "Viewer: Timecode Overlay",
         "finalcutpro_watchers_preferences_label": "Watchers: Preferences",
@@ -957,6 +958,7 @@
         "leftVertical": "Left Vertical",
         "letterbox": "Letterbox",
         "LibrariesBrowser_NoClipTitled": "No clip titled '%{title}' was found.",
+        "liftFromStoryline": "Lift From Storyline",
         "lighten": "Lighten",
         "lighten9": "Lighten",
         "lighting": "Lighting",
@@ -1117,6 +1119,7 @@
         "overrideClipNamePrompt": "Please enter a label for the pasteboard item:",
         "overrideFolderNamePrompt": "Please enter a folder for the pasteboard item:",
         "overrideValueInvalid": "The value you entered is not valid.\n\nPlease try again.",
+        "overwriteToPrimaryStoryline": "Overwrite to Primary Storyline",
         "pan": "Pan",
         "pasteboard": "Pasteboard",
         "pasteboardBuffer": "Pasteboard Buffer",
@@ -1294,8 +1297,6 @@
         "sections": "Sections",
         "segments": "Segments",
         "select": "Select",
-        "above": "Above",
-        "below": "Below",
         "selectCompressorDestination": "Select a Destination Folder:",
         "selectCompressorSettingsFile": "Select a Compressor Settings File:",
         "selectDestinationFolder": "Please select a Destination Folder:",
@@ -1362,6 +1363,7 @@
         "showGenerators": "Show Generators",
         "showHiddenFCPXMLExportOptions": "Show Hidden FCPXML Export Options",
         "showHiddenFCPXMLImportOptions": "Show Hidden FCPXML Import Options",
+        "showHorizon": "Show Horizon",
         "showInspector": "Show Inspector",
         "showSectionHeadingsInMenubar": "Show Section Headings in Menubar",
         "showTheAdvancedEqualizerUI": "Show the Advanced Equalizer UI",
