--- a/src/extensions/cp/apple/finalcutpro/strings/de/10.4.0.strings
+++ b/src/extensions/cp/apple/finalcutpro/strings/de/10.4.0.strings
@@ -17,5 +17,7 @@
     <string>Hervorhebungen</string>
     <key>CPCodecs</key>
     <string>Codecs</string>
+    <key>CPShowHorizon</key>
+    <string>Horizont einblenden</string>
 </dict>
 </plist>
